--- a/sns/app/templates/app/home.html
+++ b/sns/app/templates/app/home.html
@@ -1,5 +1,5 @@
 #試しに書いただけなのであとで編集してください
-{% extends "myapp/base.html" %}
+{% extends "app/base.html" %}
 {% block title %}ホーム{% endblock %}
 
 {% block content %}
