--- a/sns/app/templates/app/base.html
+++ b/sns/app/templates/app/base.html
@@ -5,12 +5,13 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>Microposts</title>
+   <title>{% block title %} {% endblock %}</title>
    <!--bootstrapのCSS、自作のCSSを読み込む-->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="{% static 'accounts/style.css' %}">
    {% load bootstrap4 %}
+   {% block head %}{% endblock %}
 </head>
 <body>
 <header class="mb-4">
@@ -59,6 +60,7 @@
        </div>
    </nav>
 </header>
+{% block header %}{% endblock %}
 {% block content %}
 <!-- ここに各htmlの内容が反映される -->
 {% endblock content %}
