htmlファイルの微修正（base.htmlの参照先）

--- a/sns/app/templates/App_Folder_HTML/index.html
+++ b/sns/app/templates/App_Folder_HTML/index.html
@@ -1,5 +1,5 @@
 <!--試しに書いただけなのであとで編集してください-->
-{% extends "app/base.html" %}     <!--先程の base.html 読み込み-->
+{% extends "base.html" %}     <!--先程の base.html 読み込み-->
 {% block title %}トップページ{% endblock %}   <!--titleブロックの中身書き込み-->
 
 {% block content %}   <!--contentブロックの中身書き込み-->
