--- a/sns/app/templates/App_Folder_HTML/signup.html
+++ b/sns/app/templates/App_Folder_HTML/signup.html
@@ -1,5 +1,5 @@
 <!--試しに書いただけなのであとで編集してください-->
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% block title %}ユーザ登録{% endblock %}
 
 {% block content %}
