--- a/sns/app/templates/App_Folder_HTML/base.html
+++ b/sns/app/templates/App_Folder_HTML/base.html
@@ -46,14 +46,14 @@
            <ul class="navbar-nav navbar-right">
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                    <a class="nav-link" href="{% url 'app:logout' %}">Logout</a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                    <a class="nav-link" href="{% url 'app:login' %}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:regist' %}">Sign in</a>
+                    <a class="nav-link" href="{% url 'app:regist' %}">Sign in</a>
                 </li>
             {% endif %}
             </ul>
